SRC/objects/States__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>HYPERLINK( Country__c ,  Country__r.Name , &quot;_blank&quot;) + &quot;=&gt;&quot; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Districts__c</fullName>
        <label>Total Districts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>States</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>States_Of_India</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>States Of India</label>
    </listViews>
    <nameField>
        <label>States Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>